# shredlink

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  app_version.h.in  prj.conf
app/boards/: blackpill_f411ce.overlay  nrf52840dk_nrf52840.overlay
app/configs/: debug.conf  rtt.conf
app/include/shredlink/: daq.h  hid.h
app/src/: hid.c  main.c  polling.c  tilt.c
extras/drivers/: CMakeLists.txt  Kconfig
extras/drivers/sensor/: Kconfig
extras/drivers/sensor/tilt/: CMakeLists.txt  Kconfig
extras/drivers/sensor/tilt/gpio/: CMakeLists.txt  Kconfig
extras/drivers/sensor/tilt/gpio/src/: gpio_tilt.c  gpio_tilt.h  gpio_tilt_triggers.c
extras/drivers/wii/: CMakeLists.txt  Kconfig  wii_driver_handlers.c
extras/drivers/wii/include/: wii.h
extras/drivers/wii/src/: wii_peripheral.c
extras/dts/bindings/: nintendo,wii.yaml  vendor-prefixes.txt
extras/dts/bindings/sensor/: gpio-tilt.yaml
extras/include/drivers/sensor/: tilt.h
samples/tilt_sensor/: CMakeLists.txt  prj.conf  sample.yaml
samples/tilt_sensor/boards/: blackpill_f411ce.overlay  nrf52840dk_nrf52840.overlay
samples/tilt_sensor/src/: main.c
samples/wii_guitar/: CMakeLists.txt  prj.conf  sample.yaml
samples/wii_guitar/boards/: blackpill_f411ce.overlay  nrf52840dk_nrf52840.overlay
samples/wii_guitar/src/: main.c
tests/tilt/: CMakeLists.txt  prj.conf  testcase.yaml
tests/tilt/boards/: blackpill_f411ce.overlay  nrf52840dk_nrf52840.overlay
tests/tilt/src/: main.c
zephyr/: module.yml
